src/parser/_build/_log
### Starting build.
# Target: graphsql.ml.depends, tags: { extension:ml, file:graphsql.ml, ocaml, ocamldep, quiet }
/Users/gargip/.opam/default/bin/ocamldep.opt -modules graphsql.ml > graphsql.ml.depends # cached
# Target: ast.mli.depends, tags: { extension:mli, file:ast.mli, ocaml, ocamldep, quiet }
/Users/gargip/.opam/default/bin/ocamldep.opt -modules ast.mli > ast.mli.depends
# Target: parser.mly, tags: { extension:mly, file:parser.mly, infer, ocaml, ocamlyacc, parser, quiet }
/Users/gargip/.opam/default/bin/ocamlyacc parser.mly
# Target: parser.mli.depends, tags: { extension:mli, file:parser.mli, ocaml, ocamldep, quiet }
/Users/gargip/.opam/default/bin/ocamldep.opt -modules parser.mli > parser.mli.depends # cached
# Target: ast.cmi, tags: { byte, compile, extension:mli, file:ast.mli, interf, ocaml, quiet }
/Users/gargip/.opam/default/bin/ocamlc.opt -c -o ast.cmi ast.mli
+ /Users/gargip/.opam/default/bin/ocamlc.opt -c -o ast.cmi ast.mli
File "ast.mli", line 74, characters 15-24:
74 | type program = stmt_list (*bind list * stmt list * func_def list*)
                    ^^^^^^^^^
Error: Unbound type constructor stmt_list
Command exited with code 2.
# Compilation unsuccessful.
